// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using lucide icon components > should adjust the size, stroke color and stroke width 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     viewbox="0 0 24 24"
     fill="none"
     stroke-linecap="round"
     stroke-linejoin="round"
     width="48"
     height="48"
     stroke="red"
     stroke-width="4"
     class="lucide lucide-icon lucide-grid3x3 lucide-grid-3x3"
     data-testid="grid-icon"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
        key="afitv7"
  >
  </rect>
  <path d="M3 9h18"
        key="1pudct"
  >
  </path>
  <path d="M3 15h18"
        key="5xshup"
  >
  </path>
  <path d="M9 3v18"
        key="fh3hqa"
  >
  </path>
  <path d="M15 3v18"
        key="14nvp0"
  >
  </path>
</svg>
`;

exports[`Using lucide icon components > should not scale the strokeWidth when absoluteStrokeWidth is set 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     viewbox="0 0 24 24"
     fill="none"
     stroke-linecap="round"
     stroke-linejoin="round"
     width="48"
     height="48"
     stroke="red"
     stroke-width="1"
     class="lucide lucide-icon lucide-grid3x3 lucide-grid-3x3"
     data-testid="grid-icon"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
        key="afitv7"
  >
  </rect>
  <path d="M3 9h18"
        key="1pudct"
  >
  </path>
  <path d="M3 15h18"
        key="5xshup"
  >
  </path>
  <path d="M9 3v18"
        key="fh3hqa"
  >
  </path>
  <path d="M15 3v18"
        key="14nvp0"
  >
  </path>
</svg>
`;

exports[`Using lucide icon components > should render a component 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     viewbox="0 0 24 24"
     fill="none"
     stroke-linecap="round"
     stroke-linejoin="round"
     width="24"
     height="24"
     stroke="currentColor"
     stroke-width="2"
     class="lucide lucide-icon lucide-grid3x3 lucide-grid-3x3"
>
  <rect width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
        key="afitv7"
  >
  </rect>
  <path d="M3 9h18"
        key="1pudct"
  >
  </path>
  <path d="M3 15h18"
        key="5xshup"
  >
  </path>
  <path d="M9 3v18"
        key="fh3hqa"
  >
  </path>
  <path d="M15 3v18"
        key="14nvp0"
  >
  </path>
</svg>
`;
